--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,16 +7,31 @@ data:
   dataset_name:
   dataset_path:
   augments:
-    MixUp: True
-    CutMix: True
-    RandomColorJitter:
-    RandomGaussianBlur:
-    RandomAffine:
-    RandomHorizontalFlip:
-    RandomVerticalFlip:
-    Normalize:
-      mean: [0.485, 0.456, 0.406]
-      std: [0.229, 0.224, 0.225]
+    train:
+      common:
+        ToPILImage:
+        ColorJitter:
+        GaussianBlur:
+        RandomAffine:
+        RandomHorizontalFlip:
+        RandomVerticalFlip:
+        ToTensor:     # 不归一化用: PILToTensor, 同时可不用Normalize.
+        Normalize:
+          mean: [0.485, 0.456, 0.406]
+          std: [0.229, 0.224, 0.225]
+        RandomErasing:
+      special:
+        MixUp:
+        CutMix:
+
+    val:
+      common:
+        ToPILImage:
+        ToTensor:     # 不归一化用: PILToTensor, 同时可不用Normalize.
+        Normalize:
+          mean: [ 0.485, 0.456, 0.406 ]
+          std: [ 0.229, 0.224, 0.225 ]
+      special:
 
 model:
   backbone_mode:
