--- a/config/config.yaml
+++ b/config/config.yaml
@@ -49,3 +49,14 @@ data:
       common:
         ToPILImage:
         ToTensor:     # 不归一化用: PILToTensor, 同
+
+model:
+  backbone: "resnet50"
+  pretrained: True
+  pretrained_path: ""
+  loss_func:
+    CrossEntropy:
+
+
+
+
